<resources>
    <string name="app_name">Kviz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragemnt_text">Welcome to Python programming quiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_item1">About</string>
    <string name="menu_item2">Home</string>
    <string name="menu_item3">Item 3</string>
    <string name="about">
        O nama:\n\n
        <b>Razvili:</b>\n
        Ermin Omeragić\tEnver Kovačević\n
        <b>Fakultet:</b>\n
        Prirodno-matematički fakultet\n
        <b>Predavači:</b>\n
        <b>Profesor: </b> Elmedin Selmanović
        <b>Asistent: </b> Eldina Maslo
    </string>
    <string name="welcome_text1">Dobro došli u Kviz</string>
    <string name="welcome_text2">Pritisnite \"Play\" za pocetak kviza!</string>
    <string name="btn_play">Play</string>
    <string name="btnEasyText">Lahko</string>
    <string name="btnMediumText">Srednje</string>
    <string name="btnHardText">Teško</string>
    <string name="gameOverText">KRAJ</string>
    <string name="about_us1">O nama</string>
    <string name="developed_by">Razvili:</string>
    <string name="ermin_omeragic">Ermin Omeragić</string>
    <string name="enver_kovacevic">Enver Kovačević</string>
    <string name="university_name">Prirodno-matematički</string>
    <string name="university">Fakultet:</string>
    <string name="teachers">Predavači:</string>
    <string name="professor">Profesor:</string>
    <string name="professor_name">Elmedin Selmanović</string>
    <string name="assistant">Asistent:</string>
    <string name="assistant_name">Eldina Maslo</string>
</resources>
