<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg">

        <TextView
            android:id="@+id/tvAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko_semibold"
            android:text="@string/about_us1"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.101" />

        <TextView
            android:id="@+id/tvDevelopedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko_semibold"
            android:text="@string/developed_by"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.198"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutUs"
            app:layout_constraintVertical_bias="0.093" />

        <TextView
            android:id="@+id/tvDevName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amiko"
            android:text="@string/ermin_omeragic"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="@+id/tvDevelopedBy"
            app:layout_constraintTop_toBottomOf="@+id/tvDevelopedBy" />

        <TextView
            android:id="@+id/tvDevName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/amiko"
            android:text="@string/enver_kovacevic"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/tvDevName1"
            app:layout_constraintTop_toBottomOf="@+id/tvDevName1" />

        <TextView
            android:id="@+id/tvUniversityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/university_name"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/tvDevName1"
            app:layout_constraintTop_toBottomOf="@+id/tvUniversity" />

        <TextView
            android:id="@+id/tvUniversity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/amiko_semibold"
            android:text="@string/university"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tvDevelopedBy"
            app:layout_constraintTop_toBottomOf="@+id/tvDevName2" />

        <TextView
            android:id="@+id/tvTeachers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/amiko_semibold"
            android:text="@string/teachers"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tvUniversity"
            app:layout_constraintTop_toBottomOf="@+id/tvUniversityName" />

        <TextView
            android:id="@+id/tvProfessor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amiko_semibold"
            android:text="@string/professor"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/tvDevName1"
            app:layout_constraintTop_toBottomOf="@+id/tvTeachers" />

        <TextView
            android:id="@+id/tvProfessorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amiko"
            android:text="@string/professor_name"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="@+id/tvProfessor"
            app:layout_constraintTop_toBottomOf="@+id/tvProfessor" />

        <TextView
            android:id="@+id/tvAssistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amiko_semibold"
            android:text="@string/assistant"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/tvDevName1"
            app:layout_constraintTop_toBottomOf="@+id/tvProfessorName" />

        <TextView
            android:id="@+id/tvAssistantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amiko"
            android:text="@string/assistant_name"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/tvProfessorName"
            app:layout_constraintTop_toBottomOf="@+id/tvAssistant" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>